--- a/User_signUp.html
+++ b/User_signUp.html
@@ -59,10 +59,21 @@
                           <input id="email-phone-field" placeholder="Enter email or mobile*" name="emailOrPhone" value="">
                         </div>
                       </div>
-                      <div class="OR">
+                      <div id ="hide1" class="OR">
                         <hr style="width:47%" >
                         <p class="or-heading">OR</p>
                         <hr style="width: 47%;">
+                      </div>
+                      <p id="hide2" class="Continue-with-text">Continue With</p>
+                      <div id="hide3" class="other-logins">
+                        <div class="social-icons-fb">
+                          <img id="fb-login-redirect" src="https://images.wedmegood.com/react-frontend-v4/static/media/fbicon.859bed25.svg" alt="">
+                          <p class="facebook-login">Facebook</p>
+                        </div>
+                        <div class="social-icons-google">
+                          <img id="gmail-login-redirect" src="https://images.wedmegood.com/react-frontend-v4/static/media/gicon.34be4ec1.svg" alt="">
+                          <p class="google-login">Google</p>
+                        </div>
                       </div>
                     </form>
                   </div>
@@ -72,7 +83,7 @@
 
 
 
-            
+          <script src="HideSignUp.js"></script>
         
     </body>
 </html>
