--- a/User_signUp.html
+++ b/User_signUp.html
@@ -58,6 +58,7 @@
                           <img src="Pictures/user.png" alt="" class="icon">
                           <input id="email-phone-field" placeholder="Enter email or mobile*" name="emailOrPhone" value="">
                         </div>
+                        <button class="ContinueBtn">Continue</button>
                       </div>
                       <div id ="hide1" class="OR">
                         <hr style="width:47%" >
