--- a/MainActivity.html
+++ b/MainActivity.html
@@ -5,119 +5,171 @@
         <link rel="stylesheet" href="MainActivity.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     </head>
     <body>
         <img class="bridaloutfit" src="Pictures/Bridaloutfit.jpg">
         <div class="popvenue">
-            <div class="popularvenue">Popular Venue Searches</div>
-            <div class="venue-container">
-                <div class="venue-slider">
-                    <div class="btn">
-                        <button class="button-left" onclick="plusDivs(-1)">&#10094;</button>
-                        <div class="one-box-for-slider">
-                            <div class="box-of-image">
-                                <a href="">
-                                    <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
-                                </a>
-                                <div class="text-main">
-                                    <a href=""><div class="star-hotels">4 Star & Above Hotels</div></a>
-                                    <div class="city">
-                                        <div class="uppertwo">
-                                            <a href="">
-                                                <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                            <a href="">
-                                                <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                        </div>
-                                        <a href="">
-                                            <div class="city-for-hotels ">Central Delhi<span class="margin-r-5"> | </span></div>
-                                        </a>
-                                        <a href="">
-                                            <div class="city-for-hotels">All Localities</div>
-                                        </a>
-                                    </div>  
-                                </div>
-                            </div>
-                            <div class="box-of-image">
-                                <a href="">
-                                    <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
-                                </a>
-                                <div class="text-main">
-                                    <a href=""><div class="star-hotels">Banquet Halls</div></a>
-                                    <div class="city">
-                                        <div class="uppertwo">
-                                            <a href="">
-                                                <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                            <a href="">
-                                                <div class="city-for-hotels">Ghaziabaad<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                            <a href="">
-                                                <div class="city-for-hotels ">Noida<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                        </div>
-                                        <a href="">
-                                            <div class="city-for-hotels">All Localities</div>
-                                        </a>
-                                    </div>  
-                                </div>
-                            </div>
-                            <div class="box-of-image">
-                                <a href="">
-                                    <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
-                                </a>
-                                <div class="text-main">
-                                    <a href=""><div class="star-hotels">Lawns/FormHouse</div></a>
-                                    <div class="city">
-                                        <div class="uppertwo">
-                                            <a href="">
-                                                <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                            <a href="">
-                                                <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
-                                            </a>
+        <div class="popularvenue">Popular Venue Searches</div>
+            <section class="slider_container Upper-container">
+                <div class="container">
+                    <div class="swiper card_slider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="box-of-image">
+                                    <a href="">
+                                        <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
+                                    </a>
+                                    <div class="text-main">
+                                        <a href=""><div class="star-hotels">4 Star & Above Hotels</div></a>
+                                        <div class="city">
+                                            <div class="uppertwo">
+                                                <a href="">
+                                                    <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                                <a href="">
+                                                    <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                            </div>
                                             <a href="">
                                                 <div class="city-for-hotels ">Central Delhi<span class="margin-r-5"> | </span></div>
                                             </a>
-                                        </div>
-                                        <a href="">
-                                            <div class="city-for-hotels">All Localities</div>
-                                        </a>
-                                    </div>  
+                                            <a href="">
+                                                <div class="city-for-hotels">All Localities</div>
+                                            </a>
+                                        </div>  
+                                    </div>
                                 </div>
                             </div>
-                            <div class="box-of-image">
-                                <a href="">
-                                    <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
-                                </a>
-                                <div class="text-main">
-                                    <a href=""><div class="star-hotels">Lawns/FormHouse</div></a>
-                                    <div class="city">
-                                        <div class="uppertwo">
-                                            <a href="">
-                                                <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
-                                            </a>
-                                            <a href="">
-                                                <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
-                                            </a>
+                            <div class="swiper-slide">
+                                <div class="box-of-image">
+                                    <a href="">
+                                        <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
+                                    </a>
+                                    <div class="text-main">
+                                        <a href=""><div class="star-hotels">Banquet Halls</div></a>
+                                        <div class="city">
+                                            <div class="uppertwo">
+                                                <a href="">
+                                                    <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                                <a href="">
+                                                    <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                            </div>
                                             <a href="">
                                                 <div class="city-for-hotels ">Central Delhi<span class="margin-r-5"> | </span></div>
                                             </a>
-                                        </div>
-                                        <a href="">
-                                            <div class="city-for-hotels">All Localities</div>
-                                        </a>
-                                    </div>  
+                                            <a href="">
+                                                <div class="city-for-hotels">All Localities</div>
+                                            </a>
+                                        </div>  
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="box-of-image">
+                                    <a href="">
+                                        <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
+                                    </a>
+                                    <div class="text-main">
+                                        <a href=""><div class="star-hotels">Lawns/FormHouse</div></a>
+                                        <div class="city">
+                                            <div class="uppertwo">
+                                                <a href="">
+                                                    <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                                <a href="">
+                                                    <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                            </div>
+                                            <a href="">
+                                                <div class="city-for-hotels ">Central Delhi<span class="margin-r-5"> | </span></div>
+                                            </a>
+                                            <a href="">
+                                                <div class="city-for-hotels">All Localities</div>
+                                            </a>
+                                        </div>  
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="box-of-image">
+                                    <a href="">
+                                        <img class="mySlides" src="https://image.wedmegood.com/resized/300X/uploads/option_image/62/4-star-above-hotels.png">
+                                    </a>
+                                    <div class="text-main">
+                                        <a href=""><div class="star-hotels">Lawns/FormHouse</div></a>
+                                        <div class="city">
+                                            <div class="uppertwo">
+                                                <a href="">
+                                                    <div class="city-for-hotels ">Gurgao<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                                <a href="">
+                                                    <div class="city-for-hotels">Noida<span class="margin-r-5"> | </span></div>
+                                                </a>
+                                            </div>
+                                            <a href="">
+                                                <div class="city-for-hotels ">Central Delhi<span class="margin-r-5"> | </span></div>
+                                            </a>
+                                            <a href="">
+                                                <div class="city-for-hotels">All Localities</div>
+                                            </a>
+                                        </div>  
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <button class="button-left" onclick="plusDivs(1)">&#10095;</button>
+                        <div class="swiper-button-next btn"></div>
+                        <div class="swiper-button-prev btn"></div>
                     </div>
                 </div>
-            </div>
+             </section>
+        </div>
         </div>
 
-        <script src="MainActivity.js"></script>
+    <div class="Popular_Searches">Popular Searchers</div>
+    <section class="slider_container middle-container">
+        <div class="container ">
+            <div class="swiper popular_slider">
+                <div class="swiper-wrapper middle-wrppaer">
+                    <div class="swiper-slide each-slide">
+                        <div class="popular-search-image">
+                            <a href="">
+                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide each-slide">
+                        <div class="popular-search-image">
+                            <a href="">
+                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide each-slide">
+                        <div class="popular-search-image">
+                            <a href="">
+                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide each-slide">
+                        <div class="popular-search-image">
+                            <a href="">
+                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next btn"></div>
+                <div class="swiper-button-prev btn"></div>
+            </div>
+        </div>
+    </section>
+
+         <!-- Swiper JS -->
+         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+         <script src="MainActivity.js"></script>
     </body>
 </html>
