successfull two sets

--- a/MainActivity.html
+++ b/MainActivity.html
@@ -133,32 +133,44 @@
         <div class="container ">
             <div class="swiper popular_slider">
                 <div class="swiper-wrapper middle-wrppaer">
-                    <div class="swiper-slide each-slide">
+                    <div class="swiper-slide each-slide first">
                         <div class="popular-search-image">
                             <a href="">
                                 <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
                             </a>
+                            <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide">
+                    <div class="swiper-slide each-slide gap">
                         <div class="popular-search-image">
                             <a href="">
                                 <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
                             </a>
+                            <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide">
+                    <div class="swiper-slide each-slide gap">
                         <div class="popular-search-image">
                             <a href="">
                                 <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
                             </a>
+                            <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide">
+                    <div class="swiper-slide each-slide gap">
                         <div class="popular-search-image">
                             <a href="">
                                 <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
                             </a>
+                            <p>Bridal Wear in Lucknow</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide each-slide gap">
+                        <div class="popular-search-image">
+                            <a href="">
+                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                            </a>
+                            <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
                 </div>
@@ -167,6 +179,10 @@
             </div>
         </div>
     </section>
+
+
+
+    
 
          <!-- Swiper JS -->
          <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
