done middle and upper section

--- a/MainActivity.html
+++ b/MainActivity.html
@@ -133,43 +133,53 @@
         <div class="container ">
             <div class="swiper popular_slider">
                 <div class="swiper-wrapper middle-wrppaer">
-                    <div class="swiper-slide each-slide first">
+                    <div class="swiper-slide each-slide">
                         <div class="popular-search-image">
-                            <a href="">
-                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
-                            </a>
+                            <div class="container-img ">
+                                <a href="">
+                                    <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                                </a>
+                            </div>
                             <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide gap">
-                        <div class="popular-search-image">
-                            <a href="">
-                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
-                            </a>
+                    <div class="swiper-slide each-slide">
+                        <div class="popular-search-image first">
+                            <div class="container-img">
+                                <a href="">
+                                    <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                                </a>
+                            </div>
                             <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide gap">
+                    <div class="swiper-slide each-slide">
                         <div class="popular-search-image">
-                            <a href="">
-                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
-                            </a>
+                            <div class="container-img">
+                                <a href="">
+                                    <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                                </a>
+                            </div>
                             <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide gap">
+                    <div class="swiper-slide each-slide">
                         <div class="popular-search-image">
-                            <a href="">
-                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
-                            </a>
+                            <div class="container-img">
+                                <a href="">
+                                    <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                                </a>
+                            </div>
                             <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
-                    <div class="swiper-slide each-slide gap">
+                    <div class="swiper-slide each-slide">
                         <div class="popular-search-image">
-                            <a href="">
-                                <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
-                            </a>
+                            <div class="container-img">
+                                <a href="">
+                                    <img class="popsearch_img" src="https://image.wedmegood.com/resized/300X/uploads/banner_image/1/bridal-wear.jpg">
+                                </a>
+                            </div>
                             <p>Bridal Wear in Lucknow</p>
                         </div>
                     </div>
@@ -179,9 +189,6 @@
             </div>
         </div>
     </section>
-
-
-
     
 
          <!-- Swiper JS -->
