--- a/MainActivity.html
+++ b/MainActivity.html
@@ -282,7 +282,26 @@
     </div>
 
 
-    
+    <div class="Services">
+        <div class="VMG_Services">VMG Inhouse Services</div>
+        <div class="Three-Services">
+            <div class="Pair_two_Services">
+                <div class="First_Contianer_Service">
+                    <div class="Wedsta_container">
+                        <img class="Wedsta_img" src="https://image.wedmegood.com/resized-nw/570X/uploads/wmg_services/wedsta_dweb.jpg">
+                    </div>
+                    <div class="Wedsta_txt">Wedsta</div>
+                    <div class="Wedsta_Second_txt">WMG At Home, Family Makeup Services</div>
+                    <div class="Button-Know-More">
+                        <div class="Know_more">Know More</div>
+                    </div>
+                </div>
+                <div class="Second_Contianer_Service">
+                    hi
+                </div>
+            </div>
+        </div>
+    </div>
     
 
          <!-- Swiper JS -->
