Fourth mod complete

--- a/MainActivity.html
+++ b/MainActivity.html
@@ -286,7 +286,7 @@
         <div class="VMG_Services">VMG Inhouse Services</div>
         <div class="Three-Services">
             <div class="Pair_two_Services">
-                <div class="First_Contianer_Service">
+                <div class="First_Contianer_Service Know-More-One">
                     <div class="Wedsta_container">
                         <img class="Wedsta_img" src="https://image.wedmegood.com/resized-nw/570X/uploads/wmg_services/wedsta_dweb.jpg">
                     </div>
@@ -296,8 +296,27 @@
                         <div class="Know_more">Know More</div>
                     </div>
                 </div>
-                <div class="Second_Contianer_Service">
-                    hi
+                <div class="First_Contianer_Service Know-More-Two">
+                    <div class="Wedsta_container">
+                        <img class="Wedsta_img" src="https://image.wedmegood.com/resized-nw/570X/uploads/wmg_services/wedsta_dweb.jpg">
+                    </div>
+                    <div class="Wedsta_txt">Wedsta</div>
+                    <div class="Wedsta_Second_txt">WMG At Home, Family Makeup Services</div>
+                    <div class="Button-Know-More">
+                        <div class="Know_more">Know More</div>
+                    </div>
+                </div>
+            </div>
+            <div class="Pair_two_Services">
+                <div class="First_Contianer_Service Know-More-Two">
+                    <div class="Wedsta_container">
+                        <img class="Wedsta_img" src="https://image.wedmegood.com/resized-nw/570X/uploads/wmg_services/wedsta_dweb.jpg">
+                    </div>
+                    <div class="Wedsta_txt">Wedsta</div>
+                    <div class="Wedsta_Second_txt">WMG At Home, Family Makeup Services</div>
+                    <div class="Button-Know-More">
+                        <div class="Know_more">Know More</div>
+                    </div>
                 </div>
             </div>
         </div>
